# gnu_dynamite

./: .gitignore  ChangeLog  Makefile.am  acinclude.m4  configure.ac
docs/: Makefile.am
docs/api/: Makefile.am
examples/: Makefile.am
examples/com/fuseyism/dynamite/helloworld/: App.java  Betty.java  Bob.java
lib/: Makefile.am  gen-classlist.sh.in
src/uk/ac/shef/dcs/dynamite/: Calculus.java  ChannelFactory.java  Config.java.in  Context.java  ContextFactory.java  DummyLocalityFactory.java  DynamiTEContext.java  DynamiTEContextFactory.java  DynamiTEProbeable.java  Evolver.java  InputChannel.java  LocalityFactory.java  NameNotFreeException.java  OutputChannel.java  Pool.java  Process.java  RunnableAction.java  TerminalProcess.java  ThreadedChannel.java  ThreadedChannelFactory.java  UnsupportedContextException.java
src/uk/ac/shef/dcs/dynamite/ccs/: AbstractName.java  Action.java  CCS.java  CCSLabel.java  Coname.java  Name.java  Nil.java  Par.java  Prefix.java  Rec.java  Ren.java  Res.java  Sum.java  Sync.java  Tau.java  Var.java
src/uk/ac/shef/dcs/dynamite/evolvers/: RandomExecutor.java  Simulator.java
src/uk/ac/shef/dcs/dynamite/lts/: Action.java  Label.java  Transition.java
src/uk/ac/shef/dcs/dynamite/plugins/: DynamiTEProbeable.java  Plugins.java  Probeable.java
